# JobWatch

./: .env.example  .gitignore  BACKLOG.md  Makefile  Project Walkthrough.md  README.md  docker-compose.yml  plan-details.md  pyproject.toml
docs/: architecture.md  concurrency_findings.json  concurrency_findings.md
docs/imgs/: claude_chat.md
docs/sample_incidents/: 01_postgres_down.md  02_delisted_ticker.md  PROMPT.md
scripts/: break_it.py  concurrency_test.py  mcp_probe.py
sql/: schema.sql
src/: alert_sinks.py  config.py  db.py  diagnose.py  ingest.py  metrics.py  monitor.py  pipeline.py
src/mcp_server/: server.py
tests/: test_fault_injection.py  test_ingest.py
