[project]
name = "jobwatch"
version = "0.1.0"
description = "Financial data pipeline monitor with an MCP-backed AI-Ops agent for plain-English incident diagnosis."
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "psycopg[binary,pool]>=3.2",
    "anthropic>=0.40",
    "mcp>=1.0",
    "prometheus-client>=0.20",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.0",
    "matplotlib>=3.9",
]

[project.scripts]
jobwatch-pipeline = "src.pipeline:main"
jobwatch-mcp = "src.mcp_server.server:main"
jobwatch-monitor = "src.monitor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
